@@ -6,7 +6,6 @@ export(runTrex)
 importFrom(SeuratObject,CreateDimReducObject)
 importFrom(SingleCellExperiment,colData)
 importFrom(SingleCellExperiment,reducedDim)
-importFrom(amap,Dist)
 importFrom(dplyr,bind_rows)
 importFrom(igraph,get.edgelist)
 importFrom(igraph,graph_from_adjacency_matrix)
@@ -17,6 +16,7 @@ importFrom(keras,load_model_hdf5)
 importFrom(muxViz,BuildLayersTensor)
 importFrom(muxViz,BuildSupraAdjacencyMatrixFromExtendedEdgelist)
 importFrom(muxViz,GetAggregateNetworkFromSupraAdjacencyMatrix)
+importFrom(philentropy,distance)
 importFrom(reticulate,array_reshape)
 importFrom(rlang,"%||%")
 importFrom(stringdist,stringdistmatrix)
