@@ -7,7 +7,7 @@
 #'                         chains = "both", 
 #'                         edit.method = "lv",
 #'                         AA.properties = "AF",
-#'                         AA.method = "mean",
+#'                         AA.method = "auto",
 #'                         n.trim = 0,
 #'                         c.trim = 0,
 #'                         nearest.method = "nn",
