@@ -71,7 +71,7 @@ trex_values <- maTrex(trex_example,
                         chains = "both", 
                         edit.method = "lv",
                         AA.properties = "AF",
-                        AA.method = "auto",
+                        AA.method = "mean",
                         n.trim = 0,
                         c.trim = 0,
                         nearest.method = "nn",
